--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
   },
   "homepage": "https://github.com/andreypopp/jstransformify",
   "dependencies": {
-    "through": "~2.3.4",
-    "jstransform": "~6.0.0",
-    "resolve": "~0.7.1",
-    "convert-source-map": "~0.3.3"
+    "through": "^2.3.6",
+    "jstransform": "^8.0.0",
+    "resolve": "^1.0.0",
+    "convert-source-map": "^0.4.1"
   },
   "devDependencies": {
-    "mocha": "~1.20.1",
-    "jshint": "~2.5.2",
-    "browserify": "~4.2.0"
+    "mocha": "^2.0.1",
+    "jshint": "^2.5.10",
+    "browserify": "^6.3.2"
   }
 }
